# financial-tools-mcp

./: .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  currency_dropdown_prompt_plan.md  docker-compose.yml  dropdown_menu_refactor.md  prompt_plan.md  pyproject.toml  repomix-output.xml  review.md  server.py  spec.md  todo.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 75399a20793f_add_converted_total_and_exchange_rate_.py  cd3912ae6d70_initial_migration_job_and_file_tables.py
backend/app/: __init__.py  azure_adapter.py  currency.py  db.py  main.py  models.py
backend/langgraph_nodes/: base.py  check_currency.py  convert.py  excel.py  extract.py  pipeline.py  upload.py
backend/tests/: __init__.py  test_azure_adapter.py  test_convert_node.py  test_currency.py  test_db_models.py  test_excel_node.py  test_health.py  test_integration.py  test_pipeline.py  test_placeholder.py  test_sse_progress.py
backend/tests/fixtures/: README.md
frontend/: .eslintrc.js  .eslintrc.json  .gitignore  cypress.config.js  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json
frontend/cypress/e2e/: dropdown.cy.js  dropdown_legacy.cy.ts  dropdown_virtualization.cy.ts
frontend/e2e/: invoice-flow.spec.ts
frontend/src/: App.test.tsx  App.tsx  cache.js  cache.test.js  cache.ts  config.ts  currency-utils.js  currency-utils.test.js  dropdown.css  dropdown.js  dropdown.test.js  setupTests.ts
frontend/src/__tests__/: App.test.tsx  currency-utils.test.js  dropdown.legacy.spec.tsx  fetchCurrencies.test.js  placeholder.test.ts
frontend/src/__tests__/__snapshots__/: dropdown.legacy.spec.tsx.snap
frontend/src/__tests__/lib/currency/: fetchCurrencies.test.ts  schema.test.ts
frontend/src/components/: CurrencyDropdown.test.tsx  CurrencyDropdown.tsx  CurrencyDropdownOld.tsx  CurrencySelect.test.tsx  CurrencySelect.tsx  ProgressBar.test.tsx  ProgressBar.tsx  UploadArea.test.tsx  UploadArea.tsx
frontend/src/contexts/: CurrencyContext.tsx  CurrencyContextTypes.ts
frontend/src/currency-dropdown/: fetchCurrencies.js  fetchCurrencies.test.js  main.js
frontend/src/hooks/: useCurrencies.ts  useDebounce.test.ts  useDebounce.ts  useSse.test.ts  useSse.ts
frontend/src/lib/currency/: fetchCurrencies.ts  index.ts  schema.ts  types.ts
frontend/src/utils/: currency-utils.ts  fetchCurrencies.ts
src/: __init__.py
src/exchange_rate_mcp/: __init__.py  tools.py
src/extractors/: invoice_extractor.py
src/mcp_tools/: exchange_rate.py  server.py
src/proto/: __init__.py
src/proto/extractors/: invoice_extractor.py
src/proto/mcp_tools/: __init__.py
tests/: __init__.py  test_azure_invoice_extractor.py  test_get_exchange_rate.py
