[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exchange-rate-mcp"
version = "0.1.0"
description = "MCP tool that returns the USD → ILS exchange rate for any given date"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "requests==2.32.3",
    "python-dateutil==2.9.0",
    "mcp>=1.9.2",
    "claude-code>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "requests-mock"
]

[tool.black]
line-length = 140

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = [
    "E501",  # handled by line-length
    "E203",  # whitespace before ':'
]
